codex-rs/tui/src/snapshots/codex_tui__multi_agents__tests__collab_close_watchdog_already_closed.snap
---
source: tui/src/multi_agents.rs
expression: cell_to_text(&cell)
---
• Closed Watchful [watchdog]
  └ Already closed
