codex-rs/tui/src/snapshots/codex_tui__multi_agents__tests__collab_resume_watchdog_idle.snap
---
source: tui/src/multi_agents.rs
expression: cell_to_text(&cell)
---
• Resumed Watchful [watchdog]
  └ Idle
